--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "shibaswap-v3-sdk",
+  "version": "1.0.0",
   "private": false,
   "description": "ShibaSwap V3 SDK",
   "type": "module",
-  "main": "./src/_cjs/index.js",
+  "main": "dist/index.js",
   "module": "./src/_esm/index.js",
-  "types": "./src/_types/index.d.ts",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./src/_types/index.d.ts",
@@ -116,19 +117,49 @@
     "clean": "rm -rf *.tsbuildinfo src/*.tsbuildinfo src/_esm src/_cjs src/_types",
     "docs:dev": "pnpm --filter site dev",
     "docs:build": "pnpm --filter site build",
-    "format": "biome format --write .",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "generate": "pnpm tsx ./src/chain/evm/generate.ts",
-    "lint": "biome check --write .",
+    "lint": "eslint . --ext .ts",
     "lint:dryrun": "biome check .",
     "lint:repo": "sherif",
     "lint:unused": "pnpm clean && knip",
     "prepare": "pnpm generate",
     "preinstall": "pnpx only-allow pnpm",
     "prepublishOnly": "bun scripts/prepublish-only.ts",
-    "test": "vitest -c ./test/vitest.config.ts dev",
+    "test": "vitest -c ./test/vitest.config.ts",
     "test:ci": "CI=true vitest -c ./test/vitest.config.ts --coverage --retry=3 --bail=1",
-    "test:cov": "vitest dev -c ./test/vitest.config.ts --coverage",
+    "test:cov": "vitest -c ./test/vitest.config.ts --coverage",
+    "test:watch": "vitest -c ./test/vitest.config.ts --watch",
+    "test:ui": "vitest -c ./test/vitest.config.ts --ui",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/address": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/logger": "^5.7.0",
+    "@ethersproject/networks": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
+    "@ethersproject/rlp": "^5.7.0",
+    "@ethersproject/signing-key": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
+    "@ethersproject/units": "^5.7.0",
+    "@ethersproject/wallet": "^5.7.0",
+    "@ethersproject/wordlists": "^5.7.0",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.3",
+    "decimal.js": "^10.4.3",
+    "ethers": "^5.7.2",
+    "jsbi": "^4.3.0",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.5-nightly.81fdedb",
@@ -149,7 +180,16 @@
     "typescript": "5.5.4",
     "viem": "2.21.55",
     "vitest": "2.1.1",
-    "zod": "3.24.1"
+    "zod": "3.24.1",
+    "@types/jest": "^29.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1"
   },
   "packageManager": "pnpm@10.4.1",
   "engines": {
@@ -182,5 +222,36 @@
         "project": ["**/*.ts", "**/*.tsx"]
       }
     }
-  }
+  },
+  "resolutions": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/address": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/logger": "^5.7.0",
+    "@ethersproject/networks": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
+    "@ethersproject/rlp": "^5.7.0",
+    "@ethersproject/signing-key": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
+    "@ethersproject/units": "^5.7.0",
+    "@ethersproject/wallet": "^5.7.0",
+    "@ethersproject/wordlists": "^5.7.0",
+    "ethers": "^5.7.2"
+  },
+  "keywords": [
+    "ethereum",
+    "shibaswap",
+    "v3",
+    "sdk"
+  ],
+  "author": "ShibaSwap Team",
+  "license": "MIT"
 }
