--- a/package.json
+++ b/package.json
@@ -1,88 +1,108 @@
 {
   "name": "shibaswap-v3-sdk",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "description": "ShibaSwap V3 SDK",
   "type": "module",
+  "main": "dist/index.js",
+  "module": "./src/_esm/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./src/_types/index.d.ts",
       "import": "./src/_esm/index.js",
-      "require": "./src/_cjs/index.js"
+      "require": "./src/_cjs/index.js",
+      "default": "./src/_esm/index.js"
     },
     "./chain": {
       "types": "./src/_types/chain/index.d.ts",
       "import": "./src/_esm/chain/index.js",
-      "require": "./src/_cjs/chain/index.js"
+      "require": "./src/_cjs/chain/index.js",
+      "default": "./src/_esm/chain/index.js"
     },
     "./abi": {
       "types": "./src/_types/abi/index.d.ts",
       "import": "./src/_esm/abi/index.js",
-      "require": "./src/_cjs/abi/index.js"
+      "require": "./src/_cjs/abi/index.js",
+      "default": "./src/_esm/abi/index.js"
     },
     "./address": {
       "types": "./src/_types/address/index.d.ts",
       "import": "./src/_esm/address/index.js",
-      "require": "./src/_cjs/address/index.js"
+      "require": "./src/_cjs/address/index.js",
+      "default": "./src/_esm/address/index.js"
     },
     "./api": {
       "types": "./src/_types/api/index.d.ts",
       "import": "./src/_esm/api/index.js",
-      "require": "./src/_cjs/api/index.js"
+      "require": "./src/_cjs/api/index.js",
+      "default": "./src/_esm/api/index.js"
     },
     "./calculate": {
       "types": "./src/_types/calculate/index.d.ts",
       "import": "./src/_esm/calculate/index.js",
-      "require": "./src/_cjs/calculate/index.js"
+      "require": "./src/_cjs/calculate/index.js",
+      "default": "./src/_esm/calculate/index.js"
     },
     "./config": {
       "types": "./src/_types/config/index.d.ts",
       "import": "./src/_esm/config/index.js",
-      "require": "./src/_cjs/config/index.js"
+      "require": "./src/_cjs/config/index.js",
+      "default": "./src/_esm/config/index.js"
     },
     "./currency": {
       "types": "./src/_types/currency/index.d.ts",
       "import": "./src/_esm/currency/index.js",
-      "require": "./src/_cjs/currency/index.js"
+      "require": "./src/_cjs/currency/index.js",
+      "default": "./src/_esm/currency/index.js"
     },
     "./data": {
       "types": "./src/_types/data/index.d.ts",
       "import": "./src/_esm/data/index.js",
-      "require": "./src/_cjs/data/index.js"
+      "require": "./src/_cjs/data/index.js",
+      "default": "./src/_esm/data/index.js"
     },
     "./format": {
       "types": "./src/_types/format/index.d.ts",
       "import": "./src/_esm/format/index.js",
-      "require": "./src/_cjs/format/index.js"
+      "require": "./src/_cjs/format/index.js",
+      "default": "./src/_esm/format/index.js"
     },
     "./math": {
       "types": "./src/_types/math/index.d.ts",
       "import": "./src/_esm/math/index.js",
-      "require": "./src/_cjs/math/index.js"
+      "require": "./src/_cjs/math/index.js",
+      "default": "./src/_esm/math/index.js"
     },
     "./pool": {
       "types": "./src/_types/pool/index.d.ts",
       "import": "./src/_esm/pool/index.js",
-      "require": "./src/_cjs/pool/index.js"
+      "require": "./src/_cjs/pool/index.js",
+      "default": "./src/_esm/pool/index.js"
     },
     "./sort": {
       "types": "./src/_types/sort/index.d.ts",
       "import": "./src/_esm/sort/index.js",
-      "require": "./src/_cjs/sort/index.js"
+      "require": "./src/_cjs/sort/index.js",
+      "default": "./src/_esm/sort/index.js"
     },
     "./token-list": {
       "types": "./src/_types/token-list/index.d.ts",
       "import": "./src/_esm/token-list/index.js",
-      "require": "./src/_cjs/token-list/index.js"
+      "require": "./src/_cjs/token-list/index.js",
+      "default": "./src/_esm/token-list/index.js"
     },
     "./types": {
       "types": "./src/_types/types/index.d.ts",
       "import": "./src/_esm/types/index.js",
-      "require": "./src/_cjs/types/index.js"
+      "require": "./src/_cjs/types/index.js",
+      "default": "./src/_esm/types/index.js"
     },
     "./validate": {
       "types": "./src/_types/validate/index.d.ts",
       "import": "./src/_esm/validate/index.js",
-      "require": "./src/_cjs/validate/index.js"
+      "require": "./src/_cjs/validate/index.js",
+      "default": "./src/_esm/validate/index.js"
     }
   },
   "scripts": {
@@ -97,19 +117,49 @@
     "clean": "rm -rf *.tsbuildinfo src/*.tsbuildinfo src/_esm src/_cjs src/_types",
     "docs:dev": "pnpm --filter site dev",
     "docs:build": "pnpm --filter site build",
-    "format": "biome format --write .",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "generate": "pnpm tsx ./src/chain/evm/generate.ts",
-    "lint": "biome check --write .",
+    "lint": "eslint . --ext .ts",
     "lint:dryrun": "biome check .",
     "lint:repo": "sherif",
     "lint:unused": "pnpm clean && knip",
     "prepare": "pnpm generate",
     "preinstall": "pnpx only-allow pnpm",
     "prepublishOnly": "bun scripts/prepublish-only.ts",
-    "test": "vitest -c ./test/vitest.config.ts dev",
+    "test": "vitest -c ./test/vitest.config.ts",
     "test:ci": "CI=true vitest -c ./test/vitest.config.ts --coverage --retry=3 --bail=1",
-    "test:cov": "vitest dev -c ./test/vitest.config.ts --coverage",
+    "test:cov": "vitest -c ./test/vitest.config.ts --coverage",
+    "test:watch": "vitest -c ./test/vitest.config.ts --watch",
+    "test:ui": "vitest -c ./test/vitest.config.ts --ui",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/address": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/logger": "^5.7.0",
+    "@ethersproject/networks": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
+    "@ethersproject/rlp": "^5.7.0",
+    "@ethersproject/signing-key": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
+    "@ethersproject/units": "^5.7.0",
+    "@ethersproject/wallet": "^5.7.0",
+    "@ethersproject/wordlists": "^5.7.0",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.3",
+    "decimal.js": "^10.4.3",
+    "ethers": "^5.7.2",
+    "jsbi": "^4.3.0",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.5-nightly.81fdedb",
@@ -130,7 +180,16 @@
     "typescript": "5.5.4",
     "viem": "2.21.55",
     "vitest": "2.1.1",
-    "zod": "3.24.1"
+    "zod": "3.24.1",
+    "@types/jest": "^29.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1"
   },
   "packageManager": "pnpm@10.4.1",
   "engines": {
@@ -163,5 +222,36 @@
         "project": ["**/*.ts", "**/*.tsx"]
       }
     }
-  }
+  },
+  "resolutions": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/address": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
+    "@ethersproject/logger": "^5.7.0",
+    "@ethersproject/networks": "^5.7.0",
+    "@ethersproject/properties": "^5.7.0",
+    "@ethersproject/providers": "^5.7.0",
+    "@ethersproject/rlp": "^5.7.0",
+    "@ethersproject/signing-key": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
+    "@ethersproject/units": "^5.7.0",
+    "@ethersproject/wallet": "^5.7.0",
+    "@ethersproject/wordlists": "^5.7.0",
+    "ethers": "^5.7.2"
+  },
+  "keywords": [
+    "ethereum",
+    "shibaswap",
+    "v3",
+    "sdk"
+  ],
+  "author": "ShibaSwap Team",
+  "license": "MIT"
 }
