--- a/package.json
+++ b/package.json
@@ -183,7 +183,8 @@
   },
   "packageManager": "pnpm@10.4.1",
   "engines": {
-    "node": "20.x"
+    "node": ">=20.0.0",
+    "pnpm": ">=10.0.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
